[gd_scene load_steps=8 format=3 uid="uid://bal1wnoxgrhh4"]

[ext_resource type="Script" uid="uid://dibknmh7iylgn" path="res://states/inbattle/skill_unit.gd" id="1_lvoaa"]
[ext_resource type="Texture2D" uid="uid://82k7w1mmedpt" path="res://assets/items/wand.tres" id="2_mdgfd"]
[ext_resource type="Texture2D" uid="uid://jwrp3m3e3k4p" path="res://assets/ui/UI assets (1x).png" id="3_p8j34"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mdgfd"]
atlas = ExtResource("3_p8j34")
region = Rect2(243, 3, 42, 42)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p8j34"]
texture = SubResource("AtlasTexture_mdgfd")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_23k4b"]
atlas = ExtResource("3_p8j34")
region = Rect2(163, 772, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gaq8"]
atlas = ExtResource("3_p8j34")
region = Rect2(179, 724, 10, 10)

[node name="SkillUnit" type="PanelContainer"]
offset_right = 226.0
offset_bottom = 102.0
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_p8j34")
script = ExtResource("1_lvoaa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Type" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_mdgfd")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_23k4b")
expand_mode = 1

[node name="SpeedText" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_0gaq8")
expand_mode = 1

[node name="CostText" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
